--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     initialization-mode: embedded
     data:
       - classpath:sql/schema.sql
+    sql-script-encoding: utf-8
 
 
   jpa:
