--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,27 +1,6 @@
 spring:
-  datasource:
-    #url: jdbc:h2:file:./db/test01
-   # url: jdbc:mysql://127.0.0.1:3306/stmz?serverTimezone=GMT
-    username: root
-    password: root
-    #driver-class-name: com.mysql.cj.jdbc.Driver
-    # 数据库连接池
-    hikari:
-      maximum-pool-size: 20
-      minimum-idle: 5
-    initialization-mode: embedded
-    #data:
-     # - classpath:sql/schema.sql
-    sql-script-encoding: utf-8
+  profiles:
+    active: dev
 
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-
-    show-sql: true
-  thymeleaf:
-    cache: false
-
-  mvc:
-    #static-path-pattern: /static/**
+server:
+  port: 9000
