--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,14 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- 经纬度测量计算包-->
+        <!-- https://mvnrepository.com/artifact/org.gavaghan/geodesy -->
+        <dependency>
+            <groupId>org.gavaghan</groupId>
+            <artifactId>geodesy</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
 
 
     </dependencies>
