--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
             <version>3.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
 
         <!-- shiro -->
         <dependency>
