--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <properties>
         <java.version>1.8</java.version>
         <shiro.version>1.6.0</shiro.version>
+        <javaWebsocket.version>1.5.1</javaWebsocket.version>
+        <hutool.version>5.3.7</hutool.version>
     </properties>
 
     <dependencies>
@@ -134,6 +136,18 @@
             <version>1.1.3</version>
         </dependency>
 
+        <!-- java web socket 客户端-->
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>${javaWebsocket.version}</version>
+        </dependency>
+        <!-- huTool 工具包-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
 
 
     </dependencies>
